--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Your awesome title
+title: The Classic Yuppie on Github
 email: john@classicyuppie.com
 description: > # this means to ignore newlines until "baseurl:"
   Tech evangelist and blogger. Mac enthusiast. I crave delicious design. Never fear being wrong.
